--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ practical_session_solutions.*
 
 # Include some answers
 !session1/practical_session_solutions.ipynb
+!session2/practical_session_solutions.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
